--- a/conf/application.ini
+++ b/conf/application.ini
@@ -1,3 +1,9 @@
 [product]
+db.user = 'crowd'
+db.password = 'crowd'
+db.database = 'crowd'
+db.host = 'localhost'
 application.directory=APP_PATH "/application/" 
-route.regex ='/^\/*(\w+)\/(\d+(.json)?\/?)$/'
+route.regex.level0 ='/^\/*(\w+)\/?$/'
+route.regex.level1 = '/^\/*(\w+)\/(\d+(.json)?\/?)$/'
+route.regex.level2 = '/^\/*(\w+)\/(\d)+\/(\w+)?\/?(\d+)?$/'
