--- a/nginx.conf
+++ b/nginx.conf
@@ -31,33 +31,18 @@ http {
     keepalive_timeout  65;
 
     #gzip  on;
-    lua_package_path "/var/www/lua/lib/?.lua;;";
-    server {
-	set $root /var/www/lua/;
-	listen	    9090;
-	server_name localhost;
-	location /{
-		root $root;
-		default_type text/html;
-		lua_code_cache off;
-		content_by_lua_file  $root/index.lua;
-	}
 
-    }
     server {
         listen       80;
         server_name  localhost;
 	root /var/www/crowdwriting/public;
-
-        location / {
-            index  index.php index.html index.htm;
-	    if (!-f $request_filename){
+	
+	location / {
+            index index.php  index.html index.htm;
+	    if (!-f $request_filename) {
 		rewrite ^/(.*) /index.php?$1 last;
 	    }
-
         }
-
-
         #error_page  404              /404.html;
 
         # redirect server error pages to the static page /50x.html
@@ -75,10 +60,12 @@ http {
 
         # pass the PHP scripts to FastCGI server listening on 127.0.0.1:9000
         #
+
         location ~ \.php$ {
+            root           html;
             fastcgi_pass   127.0.0.1:9000;
             fastcgi_index  index.php;
-            fastcgi_param  SCRIPT_FILENAME  $document_root$fastcgi_script_name;
+            fastcgi_param  SCRIPT_FILENAME  /var/www/crowdwriting/public$fastcgi_script_name;
             include        fastcgi_params;
         }
 
